<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="25dp">

    <TextView
        android:id="@+id/title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/titleDialog"/>

    <TextView
        android:id="@+id/subtitle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_error_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        android:layout_marginTop="10dp"
        style="@style/textDialog"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/subtitle_name"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/dialog_error_button1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            style="@style/buttonSecondary" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_add_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            style="@style/loadingButton">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/button_loading_animation"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                app:lottie_rawRes="@raw/btn_loading_animation"
                android:visibility="invisible"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/button_loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_error_button2"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_black"
                style="@style/textButton"/>


        </androidx.cardview.widget.CardView>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>