<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.home.DesksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp">


        <TextView
            android:id="@+id/title_desks_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/newyork_medium_bold"
            android:text="@string/fragment_desks_title"
            android:textColor="@color/textblack"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_separator_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingTop="15dp"
            android:text="@string/fragment_desks_separator_1"
            android:textColor="@color/textgrey"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/title_desks_fragment"
            tools:layout_editor_absoluteX="30dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listDesksToLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_separator_1" />

        <TextView
            android:id="@+id/title_separator_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingTop="15dp"
            android:text="@string/fragment_desks_separator_2"
            android:textColor="@color/textgrey"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/listDesksToLearn"
            tools:layout_editor_absoluteX="30dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listDesksAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_separator_2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>